Use face.jpg for Person schema image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
     "@type": "Person",
     "name": "Andrew Nesbitt",
     "url": "{{ site.url }}",
-    "image": "{{ site.url }}/images/boxes.png",
+    "image": "{{ site.url }}/face.jpg",
     "jobTitle": "Software Engineer",
     "description": "{{ site.description }}",
     "knowsAbout": ["Package Management", "Open Source", "Software Supply Chain", "Ruby"],
