--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="me" href="https://mastodon.social/@andrewnez">
     <link rel="me" href="https://github.com/andrew">
+    <link rel="author" href="/humans.txt">
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
