Add consulting services information to relevant pages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    <a href="/package-managers/">Package management</a> and open source metadata expert. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. <a href="/about/">More about me</a>. 
+    <a href="/package-managers/">Package management</a> and open source metadata expert. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. <a href="/about/">More about me</a>. <a href="/consulting/">Consulting services available</a>.
   </div>
 </div>
 <hr>
