Enhance home page content and add new project entries

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,9 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    <a href="/package-managers/">Package management</a> and open source metadata expert. Building <a href="https://ecosyste.ms">Ecosyste.ms</a>, a set of open datasets and tools for understanding and supporting critical open source infrastructure. <a href="/about/">More about me</a>. <a href="/consulting/">Consulting services available</a>.
+    <p>I've spent the last decade thinking about <a href="/package-managers/">package management</a>. I build <a href="https://ecosyste.ms">Ecosyste.ms</a>, the largest open dataset of open source metadata, tracking packages, repositories, and dependencies across ecosystems. I've worked at GitHub and Tidelift, and contributed to working groups at Alpha-Omega, OpenSSF, CycloneDX, and CHAOSS. <a href="/about/">More about me</a>.</p>
+
+    <p><strong>I'm available for consulting</strong> on package management, software supply chain security, and open source infrastructure. <a href="/consulting/">Learn more</a>.</p>
   </div>
 </div>
 <hr>
@@ -35,6 +37,29 @@ layout: default
     <div class="media-body">
       <h5 class="mt-0"><a href="https://ecosyste.ms">Ecosyste.ms</a></h5>
       Tools and open datasets to support OSS.
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://libraries.io"><img class="mr-3" src="/images/projects/librariesio.png" width="60px" alt="Libraries.io"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
+      The Open source Discovery Service.
+    </div>
+  </div>
+  <div class="media col-lg-4">
+    <a href="https://manifest.fm"><img class="mr-3" src="/images/projects/themanifest.png" width="60px" alt="Manifest Podcast"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://manifest.fm">Manifest Podcast</a></h5>
+      A podcast all about package management.
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="media col-lg-4">
+    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="/images/projects/sass.png" width="60px" alt="node-sass"></a>
+    <div class="media-body">
+      <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
+      Node.js bindings to libsass (1.3B downloads)
     </div>
   </div>
   <div class="media col-lg-4">
@@ -49,76 +74,6 @@ layout: default
     <div class="media-body">
       <h5 class="mt-0"><a href="https://24pullrequests.com">24 Pull Requests</a></h5>
       Giving back to open source for the holidays.
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="media col-lg-4">
-    <a href="https://manifest.fm"><img class="mr-3" src="/images/projects/themanifest.png" width="60px" alt="Manifest Podcast"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://manifest.fm">Manifest Podcast</a></h5>
-      A podcast all about package management.
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://github.com/splitrb/split"><img class="mr-3" src="/images/projects/splitrb.png" width="60px" alt="Split"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/splitrb/split">Split</a></h5>
-      The Rack Based AB testing framework
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://libraries.io"><img class="mr-3" src="/images/projects/librariesio.png" width="60px" alt="Libraries.io"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://libraries.io">Libraries.io</a></h5>
-      The Open source Discovery Service.
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="media col-lg-4">
-    <a href="https://86days.co.uk/"><img class="mr-3" src="/images/projects/86days.png" width="60px" alt="86 Days"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://86days.co.uk/">86 Days</a></h5>
-      Toyota GT86 Track Day Car Rental
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://trackday.social/"><img class="mr-3" src="/images/projects/trackday-social.png" width="60px" alt="Trackday.social"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://trackday.social/">Trackday.social</a></h5>
-       Discover upcoming track day events at the UK's premier racing circuits.
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://argperformance.com"><img class="mr-3" src="/images/projects/argperformance.png" width="60px" alt="ARG Performance"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://argperformance.com">ARG Performance</a></h5>
-      GT86 and BRZ mods, maintenance and servicing.
-    </div>
-  </div>
-
-</div>
-<div class="row">
-  <div class="media col-lg-4">
-    <a href="https://github.com/andrew/first-pr"><img class="mr-3" src="/images/projects/firstpr.png" width="60px" alt="First Pull Request"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/andrew/first-pr">First Pull Request</a></h5>
-      What was your first pull request?
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://github.com/sass/node-sass"><img class="mr-3" src="/images/projects/sass.png" width="60px" alt="node-sass"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/sass/node-sass">node-sass</a></h5>
-      Node.js bindings to libsass
-    </div>
-  </div>
-  <div class="media col-lg-4">
-    <a href="https://github.com/Homebrew/homebrew-bundle"><img class="mr-3" src="/images/projects/homebrew.png" width="60px" alt="Homebrew Bundle"></a>
-    <div class="media-body">
-      <h5 class="mt-0"><a href="https://github.com/Homebrew/homebrew-bundle">Homebrew Bundle</a></h5>
-      Bundler for non-ruby dependencies from homebrew
     </div>
   </div>
 </div>
