--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@ layout: default
 
 <div class="row">
   <div class="col-12">
-    <p>I've spent the last decade thinking about <a href="/package-managers/">package management</a>. I build <a href="https://ecosyste.ms">Ecosyste.ms</a>, the largest open dataset of open source metadata, tracking packages, repositories, and dependencies across ecosystems. I've worked at GitHub and Tidelift, and contributed to working groups at Alpha-Omega, OpenSSF, CycloneDX, and CHAOSS. <a href="/about/">More about me</a>.</p>
+    <p>I've spent the last decade thinking about <a href="/package-managers/">package management</a> and <a href="/git/">git</a>. I build <a href="https://ecosyste.ms">Ecosyste.ms</a>, the largest open dataset of open source metadata, tracking packages, repositories, and dependencies across ecosystems. I've worked at GitHub and Tidelift, and contributed to working groups at Alpha-Omega, OpenSSF, CycloneDX, and CHAOSS. <a href="/about/">More about me</a>.</p>
 
     <p><strong>I'm available for consulting</strong> on package management, software supply chain security, and open source infrastructure. <a href="/consulting/">Learn more</a>.</p>
   </div>
